syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "members.proto";

option csharp_namespace = "tobeh.Valmar";
package sprites;

// Service definition for sprite resource access
service Sprites {
  
  // Gets all sprites
  rpc GetAllSprites (google.protobuf.Empty) returns (stream SpriteReply);

  // Gets a sprite by its id
  rpc GetSpriteById (GetSpriteRequest) returns (SpriteReply);
  
  // Gets the ranking of all sprites
  rpc GetSpriteRanking (google.protobuf.Empty) returns (stream SpriteRankingReply);

  // Adds a new sprite
  rpc AddSprite (AddSpriteMessage) returns (SpriteReply);

  // Updates an existing sprite
  rpc UpdateSprite (UpdateSpriteMessage) returns (SpriteReply);
}

// Response containing a sprite's properties.
message SpriteReply {
  string name = 1;
  string url = 2;
  int32 id = 3;
  int32 cost = 4;
  bool isRainbow = 5;
  bool isSpecial = 6;
  google.protobuf.Int32Value eventDropId = 7;
  google.protobuf.StringValue artist = 8;
  bool isReleased = 9;
  repeated members.MemberFlagMessage requiredFlags = 11;
}

// Request containing a sprite id
message GetSpriteRequest {
  int32 id = 1;
}

// Response containing the ranking of a sprite
message SpriteRankingReply {
  int32 id = 1;
  int32 activeUsers = 2;
  int32 totalBought = 3;
  int32 rank = 4;
}

message AddSpriteMessage {
  string name = 1;
  string url = 2;
  int32 cost = 3;
  bool isRainbow = 4;
  google.protobuf.Int32Value eventDropId = 6;
  google.protobuf.StringValue artist = 7;
}

message UpdateSpriteMessage {
  int32 id = 1;
  AddSpriteMessage sprite = 2;
}
